--- a/package.json
+++ b/package.json
@@ -1,68 +1,34 @@
 {
-  "name": "tech-blog",
+"name": "tech-blog",
   "version": "1.0.0",
-  "description": "",
+  "description": "![Github license](https://img.shields.io/badge/license-MIT-blue.svg)",
   "main": "server.js",
-  "dependencies": {
-    "cookie": "^0.4.2",
-    "cookie-signature": "^1.0.6",
-    "connect-session-sequelize": "^7.1.5",
-    "balanced-match": "^1.0.2",
-    "brace-expansion": "^2.0.1",
-    "depd": "^2.0.0",
-    "express-handlebars": "^6.0.6",
-    "dottie": "^2.0.2",
-    "fs.realpath": "^1.0.0",
-    "express-session": "^1.17.3",
-    "glob": "^8.0.3",
-    "graceful-fs": "^4.2.10",
-    "handlebars": "^4.7.7",
-    "inflection": "^1.13.4",
-    "inflight": "^1.0.6",
-    "lodash": "^4.17.21",
-    "inherits": "^2.0.4",
-    "minimatch": "^5.1.0",
-    "lru-cache": "^6.0.0",
-    "moment": "^2.29.4",
-    "minimist": "^1.2.6",
-    "moment-timezone": "^0.5.37",
-    "ms": "^2.1.2",
-    "on-headers": "^1.0.2",
-    "once": "^1.4.0",
-    "parseurl": "^1.3.3",
-    "pg-connection-string": "^2.5.0",
-    "random-bytes": "^1.0.0",
-    "retry-as-promised": "^6.1.0",
-    "safe-buffer": "^5.2.1",
-    "semver": "^7.3.7",
-    "sequelize": "^6.23.1",
-    "sequelize-pool": "^7.1.0",
-    "source-map": "^0.6.1",
-    "toposort-class": "^1.0.1",
-    "uglify-js": "^3.17.2",
-    "uid-safe": "^2.1.5",
-    "debug": "^4.3.4",
-    "uuid": "^8.3.2",
-    "validator": "^13.7.0",
-    "wkx": "^0.5.0",
-    "wordwrap": "^1.0.0",
-    "wrappy": "^1.0.2",
-    "neo-async": "^2.6.2",
-    "yallist": "^4.0.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/graydevon/Tech-Blog.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/graydevon/Tech-Blog/issues"
   },
-  "homepage": "https://github.com/graydevon/Tech-Blog#readme"
+  "homepage": "https://github.com/graydevon/Tech-Blog#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.4",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
+  }
 }
